syntax = "proto3";

package grpc_ftp;

import "common.proto";

option go_package = "server/pkg/pb";

message ListSessionsResponse {
    repeated Session sessions = 1;
}